@@ -1,2 +1,3 @@
 usr/lib/lib*.so.*
+usr/bin/*
 usr/share/doc/libhid0
